# monorepo

./: .pnpmrc
backend/: package-lock.json  package.json
backend/migrations/: 006_deal_listing_reward_store.sql  025_job_scheduler_leases.sql  026_fraud_detection.sql  027_user_display_currency.sql  028_landlord_property_listing_fields.sql
backend/src/: app.ts  index.ts  test-helpers.ts
backend/src/config/: creditScoring.test.ts  creditScoring.ts  latePayment.test.ts  latePayment.ts  rateLimits.ts
backend/src/fraud/: engine.ts  fraud.test.ts  index.ts  store.ts  types.ts
backend/src/jobs/: latePaymentJob.perf.test.ts  latePaymentJob.test.ts  latePaymentJob.ts  monthlyDeductionReminderJob.ts
backend/src/middleware/: auth.ts  authRateLimit.ts  comprehensiveRateLimit.ts  employerApiKey.ts
backend/src/models/: adminTaskStore.ts  authStore.ts  deal.ts  (+16 more)
contracts/: Cargo.toml
contracts/deal_escrow/src/: lib.rs
contracts/deal_escrow/test_snapshots/test/: release_fails_if_split_sum_invalid.1.json  unauthorized_release_rejected.1.json
contracts/oracle_price_feeds/: Cargo.toml
contracts/oracle_price_feeds/src/: access_control.rs  lib.rs
contracts/tenant_reputation/: Cargo.toml
contracts/tenant_reputation/src/: access_control.rs  lib.rs
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx
frontend/components/: currency-toggle.tsx  header.tsx
frontend/contexts/: CurrencyContext.tsx
frontend/hooks/: useCountdown.ts
frontend/lib/: amenities.ts  config.ts  currency.ts  employersApi.ts  landlordPropertiesApi.ts  notificationsApi.ts
(+80 files in other folders)
