[workspace]
resolver = "2"
members = [
  "rent_wallet",
  "rent_payments",
  "transaction-receipt-contract",
  "staking_rewards",
  "staking_pool",
  "mvp_staking_pool",
  "whistleblower_rewards",
  "soroban_pausable",
  "soroban_access_control",
  "deal_escrow",
  "contract_access",
  "timelock",
  "vesting_schedule",

  "schema_registry",
  "allowlist_registry",
  "bond_collateral",
  "reentrancy_guard",
  "epoch_rewards",
  "slashing_module",
  "stake_delegation",
  "oracle_price_feeds",
  "tenant_reputation",
]

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
